# autobahn

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  autobahn-config.toml  autobahn-config1.toml  build.rs  config.toml  flash.sh  requirements.txt  test_config.toml
.cursor/skills/rust-external-docs/: SKILL.md
.github/workflows/: main.yml
docs/util/: low_level.md
proto/: message.proto  server_message.proto
scripts/: autobahn.service  check_status.bash  deploy.py  install.bash  install.sh  startup.bash  startup.sh
scripts/install/: install_common.sh
src/: config.rs  discovery.rs  global_connection_server.rs  lib.rs  main.rs  router.rs  server.rs  util.rs  websocket.rs
src/docs/: peer.md  server.md
src/global_connection_server/: peer.rs
src/server/: messages.rs  peer.rs  peers_map.rs  topics_map.rs  util.rs
src/server/messages/: heartbeat.rs  publish.rs  server_forward.rs  server_state.rs  subscribe.rs  unsubscribe.rs
src/util/: low_level.rs  proto.rs  ws.rs
tests/: calc_stats.py  integration_tests.rs  test_time.py  util.py
