[package]
name = "autobahn"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.5"
prost-types = "0.13.5"
tungstenite = "0.26.1"
tokio-tungstenite = "0.26.1"
tokio = { version = "1.46.0", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3.7"
toml = "0.8.19"
futures-util = "0.3.31"
rand = "0.9.0"
log = "0.4"
env_logger = "0.11.6"
bytes = "1.9.0"
tonic = "0.12.3"
uuid = { version = "1.8", features = ["v4", "fast-rng"] }
getset = "0.1.4"
no-incode-comments = "0.1.0"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
mdns-sd = "0.13.10"
get_if_addrs = "0.5.3"

[[bin]]
name = "autobahn"
path = "src/main.rs"

[build-dependencies]
prost-build = "0.13.5"
tonic-build = "0.12.3"
glob = "0.3"

[dev-dependencies]
tokio-test = "0.4.2"
futures = "0.3.31"
async-trait = "0.1.77"
mockall = "0.12.1"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[profile.profiling]
inherits = "release"
debug = true
strip = false
