[package]
name = "autobahn"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.14.1"
prost-types = "0.14.1"
tungstenite = "0.27.0"
tokio-tungstenite = "0.27.0"
tokio = { version = "1.46.0", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.19"
futures-util = "0.3.31"
rand = "0.9.1"
bytes = "1.9.0"
uuid = { version = "1.8", features = ["v4", "fast-rng"] }
anyhow = "1.0.99"
async-trait = "0.1.77"
once_cell = "1.21.3"

[[bin]]
name = "autobahn"
path = "src/main.rs"

[build-dependencies]
prost-build = "0.14.1"
glob = "0.3"

[dev-dependencies]
tokio-test = "0.4.2"
futures = "0.3.31"
async-trait = "0.1.77"
mockall = "0.12.1"
